--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "tailwind-course",
   "version": "1.0.0",
+  "homepage": "https://ahm3tj4f.github.io/tailwind-landing-page/",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "deploy": "gh-pages -d dist",
+    "deploy": "gh-pages -d build",
     "build": "tailwindcss -i ./input.css -o ./css/main.css",
     "watch": "tailwindcss -i ./input.css -o ./css/main.css --watch"
   },
